After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661202 - decodebin2: fire drained signal where appropriate
decodebin2: fire drained signal where appropriate
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal blocker
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 649474
 
 
Reported: 2011-10-07 16:42 UTC by Vincent Penquerc'h
Modified: 2011-10-17 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
decodebin2: fire drained signal where appropriate (962 bytes, patch)
2011-10-07 16:42 UTC, Vincent Penquerc'h
none Details | Review
decodebin2: fire drained signal where appropriate (976 bytes, patch)
2011-10-07 17:14 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-10-07 16:42:43 UTC
decodebin2: fire drained signal where appropriate
Comment 1 Vincent Penquerc'h 2011-10-07 16:42:45 UTC
Created attachment 198550 [details] [review]
decodebin2: fire drained signal where appropriate

This will allow playbin2 to send its about-to-finish signal.
Taken out (apparently by mistake) by the EOS rewrite in july.
Comment 2 Vincent Penquerc'h 2011-10-07 17:14:16 UTC
Created attachment 198552 [details] [review]
decodebin2: fire drained signal where appropriate

This will allow playbin2 to send its about-to-finish signal.
Taken out (apparently by mistake) by the EOS rewrite in july.
Comment 3 Vincent Penquerc'h 2011-10-07 17:16:04 UTC
New version catches the early out case as well.

FLAC files aren't replayed from the start, but that seems to be the case also with a -base from before the rewrite that removed the signal, so that's another bug.
Comment 4 Vincent Penquerc'h 2011-10-17 12:33:04 UTC
This broke a fairly important playbin2 feature (looping, and playing more than one in a row), so I'll bump that to major.
Comment 5 Sebastian Dröge (slomo) 2011-10-17 13:37:04 UTC
commit 5e9862b2ba891b066fcedc4f9c2dcabecfb3b9fc
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Oct 7 17:41:32 2011 +0100

    decodebin2: fire drained signal where appropriate
    
    This will allow playbin2 to send its about-to-finish signal.
    Taken out (apparently by mistake) by the EOS rewrite in july.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=661202